--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,8 +23,8 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      ¿Que es un Quiz?</a>
+    <a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+    <a href="https://github.com/pmoreno83/quiz-node">GitHub</a>
   </footer>
 </div>
 </body> 
