--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,5 @@ header, nav, section { background: #eee; text-align: center;}
 footer               { background: #eee; text-align: center;}
 nav span             { margin: 0px 10px 0px 0px;} 
 footer  > a          { padding: 10px;}
+video	             { padding-left: 100px;}
+.author				 { padding-top: 20px;}
