--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,4 +1,11 @@
 <table>
+
+ <form method="get" action="/quizes">        
+      <p>Busque aqui su pregunta: <p>
+      <input type="text" name="search" value=""/>
+      <input type="submit" value="Enviar">
+ </form>
+
 <% var i; for (i=0; i < quizes.length; i++) { %>
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 <% } %>
