--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,6 @@
     <form method="get" action="/quizes/<%= quiz.id %>/answer">        
       <p>Pregunta: <%= quiz.pregunta %> <p>
+      <p>Tematica: <%= quiz.tema %> <p>
       <input type="text" name="respuesta" value="Responda aquí"/>
       <input type="submit" value="Enviar">
     </form>
