--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -3,11 +3,31 @@
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
 <select name="quiz[tema]">
-  <option value="otro" selected>Otro</option>
-  <option value="humanidades">Humanidades</option>
-  <option value="ocio">Ocio</option>
-  <option value="ciencia">Ciencia</option>
-  <option value="tecnologia">Tecnología</option>
+  <option value="otro" <%
+      if(quiz.tema==='otro'){
+    %>    
+        selected
+    <% } %>>Otro</option>
+  <option value="humanidades"<%
+      if(quiz.tema==='humanidades'){
+    %>    
+        selected
+    <% } %>>Humanidades</option>
+  <option value="ocio"<%
+      if(quiz.tema==='ocio'){
+    %>    
+        selected
+    <% } %>>Ocio</option>
+  <option value="ciencia"<%
+      if(quiz.tema==='ciencia'){
+    %>    
+        selected
+    <% } %>>Ciencia</option>
+  <option value="tecnologia"<%
+      if(quiz.tema==='tecnologia'){
+    %>    
+        selected
+    <% } %>>Tecnología</option>
 </select>
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar"/>
