--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,13 @@
-    <form method="get" action="/quizes/<%= quiz.id %>/answer">        
-      <p>Pregunta: <%= quiz.pregunta %> <p>
-      <p>Tematica: <%= quiz.tema %> <p>
-      <input type="text" name="respuesta" value="Responda aquí"/>
-      <input type="submit" value="Enviar">
-    </form>
+<form method="get" action="/quizes/<%= quiz.id %>/answer">        
+	<p>Pregunta: <%= quiz.pregunta %> <p>
+    <p>Tematica: <%= quiz.tema %> <p>
+    <input type="text" name="respuesta" value="Responda aquí"/>
+    <input type="submit" value="Enviar">
+</form>
+
+<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<%for(index in quiz.Comments){%>
+<p>- <%=quiz.Comments[index].texto%></p>
+<%}%>
