Añadida funcionalidad login

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,3 +13,4 @@ video	             { padding-left: 100px;}
 .author				 { padding-top: 20px;}
 
 #ErrorMsgs			 { color: #f61; font-size: smaller}
+.right: 			 { float: right;}
