--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,12 @@
 <body>
 <div id="page-wrap">
   <header class="main" id="h1">
+    <%if (!session.user) {%>
+      <span class="rigth"><a href="/login">Login</a></span>
+    <%} else {%>
+      <span class="rigth"><%=session.user.username%> <a href="/logout">Logout</a></span>
+    <%}%>
+
     <h2>Quiz: <span>el juego de las preguntas</span></h2>
   </header>
 
